<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titres des activités -->

    <string name="title_activity_treasure_hunt_creation">Créez votre chasse aux trésors</string>
    <string name="title_activity_treasure_hunt_utility_creation">Ajoutez des trésors à votre chasse</string>
    <string name="title_activity_treasure_hunt_participation">Participez à une chasse aux trésors</string>
    <string name="title_activity_treasure_hunt_starting">TreasureHuntStarting</string>
    <string name="title_activity_treasure_hunt_to_participate">TreasureHuntToParticipate</string>
    <string name="title_activity_permission_gps">PermissionGps</string>
	<string name="title_activity_manage_hunts">Gérez vos chasses aux trésors</string>
	
    <!-- Strings liées aux boutons, EditText, etc... -->

    <string name="app_name">TreasureHunt2</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Bienvenue sur TreasureHunt !</string>
    <string name="create_hunt">Créer une chasse au trésor</string>
    <string name="participate_hunt">Participer à une chasse au trésor</string>
    <string name="title_creation_hunt">Création de votre chasse au trésor</string>
    <string name="name_new_hunt">Nom de la chasse</string>
    <string name="date_treasure_hunt">Date de la chasse au trésor</string>
    <string name="add_treasure">Ajouter un nouveau trésor au parcours</string>
    <string name="end_course">Finir le parcours</string>
    <string name="current_position">Votre position actuelle</string>
    <string name="name_of_hunt">Nom de la chasse à laquelle vous souhaitez participer</string>
    <string name="clue">Indice pour trouver le trésor</string>
    <string name="clue_given">Affichage de l\'indice fourni par le créateur. . .</string>
    <string name="validate_button_creation_hunt">Valider</string>
	<string name="longitude">Longitude</string>
	<string name="latitude">Latitude</string>
	<string name="launch">Lancez la partie!</string>
	<string name="manage">Gérez vos chasses aux trésors</string>
	<string name="remove_treasure">Supprimez/Abandonnez une chasse aux trésors</string>
	<string name="modify_treasure">Modifiez/Continuez votre chasse aux trésors</string>
	<string name="local">Vos créations</string>
	<string name="imported">Vos participations</string>
	<string name="distance">Distance</string>
	<!-- Strings pour la BD -->
	<!-- Table Treasure -->
	<string name="nomChasse">Nom de la chasse aux trésors</string>
	<string name="dateOrganisation">Date d\'organisation de la chasse</string>
	<!-- Table Hunt -->
	
</resources>