<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
    tools:context=".TreasureHuntCreation" >

    <TextView
        android:id="@+id/title_creation_hunt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/title_creation_hunt" />

    <TextView
        android:id="@+id/name_new_hunt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_creation_hunt"
        android:layout_below="@+id/title_creation_hunt"
        android:layout_marginTop="44dp"
        android:text="@string/name_new_hunt" />

    <EditText
        android:id="@+id/name_choosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/title_creation_hunt"
        android:layout_below="@+id/name_new_hunt"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/date_treasure_hunt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_choosen"
        android:layout_below="@+id/name_choosen"
        android:layout_marginTop="28dp"
        android:text="@string/date_treasure_hunt" />

      <EditText
          android:id="@+id/date_picker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/date_treasure_hunt"
          android:layout_below="@+id/date_treasure_hunt"
          android:layout_marginTop="40dp"
          android:ems="10"
          android:inputType="date"
          android:text="JJ/MM/AAAA" >

          <requestFocus />
      </EditText>

      <Button
          android:id="@+id/validate_button_creation_hunt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignRight="@+id/date_treasure_hunt"
          android:layout_marginBottom="50dp"
          android:layout_marginRight="29dp"
          android:text="@string/validate_button_creation_hunt" />
 
</RelativeLayout>